[package]
name = "wena"
version = "0.0.2"
authors = ["Nuno Maduro <enunomaduro@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Wena is a micro-framework that provides an elegant starting point for your console application."
readme = "README.md"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
colored = { version = "2.0.0" }
regex = { version = "1.5.6" }
