[package]
name = "wena"
version = "0.2.0"
authors = ["Nuno Maduro <enunomaduro@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Wena is a micro-framework that provides an elegant starting point for your console application."
readme = "README.md"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
colored = { version = "2.0.0" }
terminal_size = { version = "0.2.1" }
regex = { version = "1.5.6" }
